defaults/data/headlines-view.css
body.headlines-view .full-container {
    margin-left: -50px;
}

body.headlines-view.multiple-feeds .full-container {
    margin-left: -100px;
}

article.headline > .full-container {
    margin-bottom: 10px;
}

.collapse-button {
    height: 25px;
    background: url(chrome://brief/skin/icons/collapse-item.png) no-repeat center 0;
}

.collapse-button:hover {
    background-color: #f2f2f2;
    background-position: center -25px;
}

article:not(.headline) > .full-container > .collapse-button {
    display: none;
}

article.headline > .full-container[showing] {
    transition: opacity 200ms;
}

.day-header {
    display: flex;
    margin: 30px 0 10px;
    padding-left: calc((100% - 720px) / 2 - 30px);
    font-size: 14px;
    text-transform: uppercase;
    color: #606b78;
}

body.headlines-view.multiple-feeds .day-header {
    padding-left: calc((100% - 820px) / 2 - 30px);
}

.headline-container {
    display: flex;
    flex: 0 1 720px;
    min-width: 0;
    height: 34px;
    align-items: center;
    cursor: default;
}

body.headlines-view.multiple-feeds .headline-container {
    flex-basis: 820px;
}

.headline-header {
    display: flex;
    flex-grow: 1;
    align-items: center;
    height: 34px;
    border-bottom: 1px solid #d3dfe5;
    border-left: 2px solid transparent;
    transition: border-color 200ms;
    min-width: 0;
}

article.selected .headline-header {
    border-left-color: #3e8fb7;
}

.headline-container:hover > .headline-header {
    background-color: #f2f2f2;
}

.feed-icon {
    flex: 0 0 16px;
    height: 16px;
    margin-left: 5px;
    margin-right: 7px;
    opacity: 0.7;
}

.headline-feed-name {
    flex: 0 0 100px;
    height: 15px;
    margin-right: 15px;
    overflow: hidden;
    font-size: 10px;
    color: #606b78;
}

body:not(.multiple-feeds) .feed-icon,
body:not(.multiple-feeds) .headline-feed-name {
    display: none;
}


.headline-title {
    flex: 1 1 auto;
    height: 18px;
    margin-left: 7px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    font-family: Arial, sans-serif;
    font-weight: bold;
    font-size: 13px;
    line-height: 20px;
    color: #475059;
}

article.read .headline-title {
    font-weight: normal;
    color: #5c6773;
}


.headline-link {
    flex-shrink: 0;
    width: 30px;
    height: 30px;
    margin-top: 2px;
    background: url(chrome://brief/skin/icons/entry-arrow.png) no-repeat 3px 0;
}

.headline-link:hover {
    background-position: 3px -30px;
}

.headline-link:active {
    background-position: 3px -60px;
}

.headline-link:not([href]) {
    visibility: hidden;
}


.headline-container > .controls {
    display: flex;
    flex-shrink: 0;
    margin-left: 8px;
    margin-right: 6px;
    visibility: hidden;
}

.headline-container:hover > .controls {
    visibility: visible;
}

.headline-container > .controls > .button {
    transition: none;
}

.headline-container > .controls > .bookmark-button {
    display: none;
}

